...
  "splitBill": "Split bill",
  "splitBillNoProducts": "No products in subtotal",
  "splitBillConfirmTitle": "Confirm split bill",
  "splitBillQuestion": "Remove products from order?",
  "splitBillBackAndDelete": "No, back & delete",
  "splitBillConfirm": "Split",
  "importPermissionErrorMessage": "OrderMate can't access the file – please grant storage permissions or move the file into a readable folder that's not in an external memory card (SD-card), e.g. 'Downloads'",
  "insertDividerBelowTitle": "Divider after this product",
  "insertDividerBelowDesc": "This creates 'sections' in the product selection",
  "calculateChangeTitle": "Calculate change",
  "calculateChangeDesc": "Opens a window for calculating change when completing an order or splitting the bill",
  "totalSum": "Total sum",
  "given": "Given",
...
